--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo\"Error:no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "mocha test",
+    "dev": "nodemon server.js",
+    "coverage":"nyc --reporter=html yarn run test"
   },
   "license": "MIT",
   "dependencies": {
+    "chai": "^4.3.10",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
     "mongoose": "^8.0.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "nyc": "^15.1.0"
   }
 }
