--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "mocha test",
     "dev": "nodemon server.js",
-    "coverage":"nyc --reporter=html yarn run test"
+    "coverage": "nyc --reporter=html yarn run test"
   },
   "license": "MIT",
   "dependencies": {
@@ -16,6 +16,7 @@
     "mocha": "^10.2.0",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "sinon-chai": "^3.7.0"
   }
 }
